--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.17.4
 anyio==4.11.0
 argon2-cffi==25.1.0
 argon2-cffi-bindings==25.1.0
@@ -65,6 +66,7 @@ packaging==25.0
 pandas==2.3.3
 pandocfilters==1.5.1
 parso==0.8.5
+pefile==2023.2.7
 platformdirs==4.5.0
 prometheus_client==0.23.1
 prompt_toolkit==3.0.52
@@ -76,11 +78,14 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.23
 Pygments==2.19.2
+pyinstaller==6.16.0
+pyinstaller-hooks-contrib==2025.9
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 python-json-logger==4.0.0
 pytz==2025.2
 pywin32==311
+pywin32-ctypes==0.2.3
 pywinpty==3.0.2
 PyYAML==6.0.3
 pyzmq==27.1.0
