--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
 altgraph==0.17.4
 anyio==4.11.0
 argon2-cffi==25.1.0
@@ -9,10 +12,12 @@ attrs==25.4.0
 babel==2.17.0
 beautifulsoup4==4.14.2
 bleach==6.2.0
+brotli==1.2.0
 cachetools==6.2.1
 certifi==2025.10.5
 cffi==2.0.0
 charset-normalizer==3.4.3
+click==8.3.1
 colorama==0.4.6
 comm==0.2.3
 debugpy==1.8.17
@@ -20,7 +25,11 @@ decorator==5.2.1
 defusedxml==0.7.1
 executing==2.2.1
 fastjsonschema==2.21.2
+filelock==3.20.0
 fqdn==1.5.1
+frozenlist==1.8.0
+fsspec==2025.10.0
+g4f==6.6.6
 git-filter-repo==2.47.0
 google-api-core==2.28.1
 google-api-python-client==2.186.0
@@ -29,9 +38,11 @@ google-auth-httplib2==0.2.1
 google-auth-oauthlib==1.2.3
 googleapis-common-protos==1.71.0
 h11==0.16.0
+hf-xet==1.2.0
 httpcore==1.0.9
 httplib2==0.31.0
 httpx==0.28.1
+huggingface_hub==1.1.4
 idna==3.11
 ipykernel==6.30.1
 ipython==9.6.0
@@ -56,11 +67,13 @@ lark==1.3.0
 MarkupSafe==3.0.3
 matplotlib-inline==0.1.7
 mistune==3.1.4
+multidict==6.7.0
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook_shim==0.2.4
+numpy==2.3.5
 oauthlib==3.3.1
 packaging==25.0
 pandas==2.3.3
@@ -70,6 +83,7 @@ pefile==2023.2.7
 platformdirs==4.5.0
 prometheus_client==0.23.1
 prompt_toolkit==3.0.52
+propcache==0.4.1
 proto-plus==1.26.1
 protobuf==6.33.0
 psutil==7.1.0
@@ -77,6 +91,7 @@ pure_eval==0.2.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.23
+pycryptodome==3.23.0
 Pygments==2.19.2
 pyinstaller==6.16.0
 pyinstaller-hooks-contrib==2025.9
@@ -99,6 +114,7 @@ rpds-py==0.27.1
 rsa==4.9.1
 Send2Trash==1.8.3
 setuptools==80.9.0
+shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.8
@@ -107,7 +123,9 @@ tabulate==0.9.0
 terminado==0.18.1
 tinycss2==1.4.0
 tornado==6.5.2
+tqdm==4.67.1
 traitlets==5.14.3
+typer-slim==0.20.0
 types-python-dateutil==2.9.0.20251008
 typing_extensions==4.15.0
 tzdata==2025.2
@@ -118,3 +136,4 @@ wcwidth==0.2.14
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.9.0
+yarl==1.22.0
